k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: database
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: api
  labels:
    istio-injection: enabled
